// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samplesReducer Adds a new sample correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
  "qwe234": {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": {},
    "name": "test sample 2",
    "options": {},
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Adds validating to an experiment 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {
      "someOption": false,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [
      "validatingExperimentId",
    ],
  },
  "qwe234": {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": {},
    "name": "test sample 2",
    "options": {
      "someOption": false,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Delete samples correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Deletes sample metadata correctly 1`] = `
{
  "[object Object]": {
    "metadata": {
      "metadata-test": "old-value",
    },
  },
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Handles experimentMetadataRename correctly 1`] = `
{
  "asd123": {
    "experimentId": "mockExpId",
    "metadata": {
      "metadata-new": "value",
    },
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Handles samplesValueInMetadataTrackUpdated correctly 1`] = `
{
  "asd123": {
    "metadata": {
      "metadata-test": "new-value",
    },
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Inserts a new sample correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Inserts sample metadata correctly 1`] = `
{
  "[object Object]": {
    "metadata": {},
  },
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {
      "metadata-test": "value",
    },
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Loads samples correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "ids": [
    "asd123",
    "qwe234",
  ],
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
  "qwe234": {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": {},
    "name": "test sample 2",
    "options": {},
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Removes validating from an experiment 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {
      "someOption": false,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "validating": [
      "otherValidatingExperimentId",
    ],
  },
  "qwe234": {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": {},
    "name": "test sample 2",
    "options": {
      "someOption": false,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Sets up saved state correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Sets up saving state correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": "Saving",
  },
}
`;

exports[`samplesReducer Stores error state correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": "Error message",
    "loading": false,
    "saving": false,
  },
}
`;

exports[`samplesReducer Updates a sample correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "updated name",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;

exports[`samplesReducer Updates options correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "metadata": {},
    "name": "test sample",
    "options": {
      "someOption": true,
    },
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
  "qwe234": {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [],
    "files": {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "metadata": {},
    "name": "test sample 2",
    "options": {
      "someOption": true,
    },
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Updates sample files correctly 1`] = `
{
  "asd123": {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "experimentId": null,
    "fileNames": [
      "features.tsv",
    ],
    "files": {
      "features.tsv": {
        "error": false,
        "lastModified": "newLastModified",
        "mime": "",
        "name": "features.tsv",
        "objectKey": "",
        "path": "",
        "size": 0,
        "success": false,
        "upload": {
          "amplifyPromise": null,
          "status": null,
        },
      },
    },
    "lastModified": "newLastModified",
    "metadata": {},
    "name": "test sample",
    "options": {},
    "type": null,
    "uuid": "asd123",
  },
  "meta": {
    "error": false,
    "loading": false,
    "saving": false,
    "validating": [],
  },
}
`;
